# tv-tracker

./: .coveragerc  .dockerignore  .env.example  .env.sample  .flake8  .gitignore  .isort.cfg  .travis.yml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  fabfile.py  gunicorn.py  manage.py  pip_tools.Dockerfile  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
docker/: dev-cmd.sh  dev.Dockerfile  docker-compose.yml  prod-cmd.sh  prod.Dockerfile
docker/development/: Dockerfile  docker-compose.yml
docker/production/: Dockerfile  docker-compose.yml
project/: settings.py  urls.py  wsgi.py
project/apps/accounts/: admin.py  apps.py  forms.py  jwt.py  managers.py  models.py  serializers.py  urls.py  views.py
project/apps/emails/: admin.py  apps.py  models.py
project/apps/tmdb/: apps.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
project/apps/website/: admin.py  apps.py  forms.py  models.py  (+3 more)
project/core/: apps.py  jwt.py  urls.py  views.py
project/settings/: base.py  local.py  prod.py  test.py
requirements/: base.txt  dev.txt  development.txt  local.txt  production.txt  travis.txt
scripts/: _format.sh  _lint.sh  _manage-py.sh  deploy.sh  docker-compose.sh  format  format.sh  lint  lint-n-format.sh  lint.sh  manage-py  manage-py.sh  poetry  poetry.sh  push_docker_image.sh  start-dev.sh  start-prod.sh  test  test.sh  wait.sh
source/: settings.py  urls.py
source/core/: apps.py  models.py
terraform/production/: config.tf  main.tf
terraform/qa/: config.tf  main.tf
(+159 files in other folders)
