[tool.black]
line-length = 99

[tool.isort]
include_trailing_comma = true
line_length = 99
multi_line_output = 3
skip = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.poetry]
name = "tv-tracker"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"

asgiref = "3.2.3"
dj-database-url = "0.5.0"
django = "3.0.2"
gevent = "1.4.0"
gunicorn = "20.0.4"
httpx = "0.7.8"
psycopg2-binary = "2.8.4"
python-decouple = "3.3"
pytz = "2019.3"
sentry-sdk = "0.13.5"
whitenoise = "5.0.1"

[tool.poetry.dev-dependencies]
bandit = "1.6.2"
black = "19.3b0"
django-debug-toolbar = "2.1"
factory_boy = "2.12.0"
flake8 = "3.7.9"
freezegun = "0.3.12"
isort = "4.3.21"
pytest = "5.3.2"
pytest-asyncio = "0.10.0"
pytest-cov = "2.8.1"
pytest-django = "3.7.0"
pytest-mock = "1.13.0"
toml = "0.10.0"
